Migraiton to grails 3.2.10

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
-grailsVersion=3.0.10
-gradleWrapperVersion=2.3
+grailsVersion=3.2.10
+gradleWrapperVersion=3.4.1
+asciidoctorGradlePluginVersion=1.5.3
+bintrayUser=
+bintrayKey=
+grailsPortalUser=
+grailsPortalPassword=
