--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 grailsVersion=3.2.10
 gradleWrapperVersion=3.4.1
 asciidoctorGradlePluginVersion=1.5.3
+websiteUrl=http://grails-plugins.github.io/cache-headers
+issueTrackerUrl=https://github.com/grails-plugins/cache-headers/issues
+vcsUrl=https://github.com/grails-plugins/cache-headers
 bintrayUser=
 bintrayKey=
 grailsPortalUser=
