Add gradle configuration to add verbosity to tests output

--- a/build.gradle
+++ b/build.gradle
@@ -88,3 +88,7 @@ task docs {
 jar {
     exclude "*TestController**"
 }
+
+
+apply from: "${rootProject.projectDir}/gradle/integrationTestVerbose.gradle"
+apply from: "${rootProject.projectDir}/gradle/testVerbose.gradle"
